[package]
name = "ditto"
version = "0.1.0"
authors = ["VM <vishalmenon.92@gmail.com>"]
edition = "2018"

[lib]
name = "ditto"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bip39 = "1.0.1"
rand = "0.6.0"
bitcoin = "0.26.0"
secp256k1 = {version = "0.20.1", features = ["rand"]}
base64 = "0.12.3"
bdk = "0.5.0"
